--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,2 @@
-<h1><% @students.each do |student| %>
-  <div><%= student.first_name + " " + student.last_name %></div>
-<% end %></h1>
+<<h1><%= @student.to_s %></h1>
+
